PUSE LOS LINKS DE CSS DE LAS PAGINAS Y TAMBIEN LOS SCRIPTS (Usuarios)
ESO ES TODO

--- a/fronted/public/views/usuarios/cambiar_contra.html
+++ b/fronted/public/views/usuarios/cambiar_contra.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cambiar Contraseña - Lembo</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/usuarios/cambiar_contra.css">
 </head>
 <body>
     <header class="header">
@@ -31,6 +31,6 @@
         </form>
     </main>
     
-    <script src="script.js"></script>
+    <script src="/fronted/public/js/usuarios/cambiar_contra.js"></script>
 </body>
 </html>
