--- a/fronted/public/views/usuarios/inicio_sesion.html
+++ b/fronted/public/views/usuarios/inicio_sesion.html
@@ -39,6 +39,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script> <!-- Enlace al script -->
+    <script src="/fronted/public/js/usuarios/inicio_sesion.js"></script> <!-- Enlace al script -->
 </body>
 </html>
