--- a/fronted/public/views/usuarios/soli_actualizar.html
+++ b/fronted/public/views/usuarios/soli_actualizar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solicitud actualización de usuarios</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/usuarios/soli_actualizar.css">
 </head>
 <body>
 
@@ -37,6 +37,6 @@
         </div>
     </main>
 
-    <script src="script.js"></script> <!-- Enlace al archivo JavaScript -->
+    <script src="/fronted/public/js/usuarios/soli_actualizar.js"></script> <!-- Enlace al archivo JavaScript -->
 </body>
 </html>
