--- a/fronted/public/views/usuarios/actualizados.html
+++ b/fronted/public/views/usuarios/actualizados.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Actualización de Datos</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/usuarios/actualizados.css">
 </head>
 <body>
     <header class="header">
