--- a/fronted/public/views/usuarios/codigo.html
+++ b/fronted/public/views/usuarios/codigo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lembo - Ingresar Código</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/usuarios/codigo.css">
 </head>
 <body>
     <header class="header">
@@ -41,6 +41,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="/fronted/public/js/usuarios/codigo.js"></script>
 </body>
 </html>
