--- a/fronted/public/views/usuarios/recup_contra.html
+++ b/fronted/public/views/usuarios/recup_contra.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperar Contraseña</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/usuarios/recup_contra.css">
 </head>
 <body>
     <div class="page">
@@ -41,6 +41,6 @@
         </main>
     </div>
 
-    <script src="script.js"></script> <!-- Enlace al script -->
+    <script src="/fronted/public/js/usuarios/recup_contra.js"></script> <!-- Enlace al script -->
 </body>
 </html>
