--- a/fronted/public/views/sensores/ID_sensores_habilitar.html
+++ b/fronted/public/views/sensores/ID_sensores_habilitar.html
@@ -26,6 +26,6 @@
         </div>
     </main>
 
-    <script src="../JS/validacion_ID.js"></script>
+    <script src="/fronted/public/js/sensores/validacion_actualizar.js"></script>
 </body>
 </html>
