--- a/fronted/public/views/insumos/ID_insumos_habilitar.html
+++ b/fronted/public/views/insumos/ID_insumos_habilitar.html
@@ -26,6 +26,6 @@
         </div>
     </main>
 
-    <script src="../JS/validacion_ID.js"></script>
+    <script src="/fronted/public/js/insumo/validacion_ID.js"></script>
 </body>
 </html>
