Cambio de script y css
Nombres de mrda que le da kevin a esa monda, aunque no se porque lo hice si ese man esta haciendo supuestamente otros homes entonces el lo tiene que hacer real, la chimba

--- a/fronted/public/views/homes/home-ciclo.html
+++ b/fronted/public/views/homes/home-ciclo.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home ciclo cultivo</title>
-    <link rel="stylesheet" href="../CSS/stylieshome-insumos-sensores.css">
-    <script src="/Lembo/fecth/js/grid.js"></script>
+    <!-- <link rel="stylesheet" href="../CSS/stylieshome-insumos-sensores.css"> -->
+    <link rel="stylesheet" href="/fronted/public/css/pages/homes/stilyciclo.css">
+    <script src="/fronted/public/views/components/grid.js"></script>
     
 </head>
 <body>
