--- a/fronted/public/views/homes/home-cultivo-3.html
+++ b/fronted/public/views/homes/home-cultivo-3.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home cultivo</title>
-    <link rel="stylesheet" href="../CSS/stylieshome-cultivo.css">
-    <script src="/Lembo/fecth/js/grid.js"></script>
+    <!-- <link rel="stylesheet" href="../CSS/stylieshome-cultivo.css"> -->
+    <link rel="stylesheet" href="/fronted/public/css/pages/homes/stylieshome-cultivo.css">
+    <script src="/fronted/public/views/components/grid.js"></script>
     
 </head>
 <body>
