Lo mismo que los mismos commits
Lo mismo

--- a/fronted/public/views/cultivo/ID_cultivo_habilitar.html
+++ b/fronted/public/views/cultivo/ID_cultivo_habilitar.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ID Cultivo</title>
-    <link rel="stylesheet" href="../CSS/style_ID_cultivo.css">
+    <!-- <link rel="stylesheet" href="../CSS/style_ID_cultivo.css"> -->
+    <link rel="stylesheet" href="/fronted/public/css/pages/cultivo/style_ID_cultivo.css">
 </head>
 <body>
     <header class="header">
@@ -26,6 +27,6 @@
         </div>
     </main>
 
-    <script src="../JS/validacion_ID.js"></script>
+    <script src="/fronted/public/js/cultivos/validacion_ID.js"></script>
 </body>
 </html>
