--- a/fronted/public/views/cultivo/ID_cultivo_deshabilitar.html
+++ b/fronted/public/views/cultivo/ID_cultivo_deshabilitar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ID Cultivo</title>
-    <link rel="stylesheet" href="../CSS/style_ID_cultivo.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/cultivo/style_deshabilitar_cultivo.css">
 </head>
 <body>
     <header class="header">
@@ -26,6 +26,6 @@
         </div>
     </main>
 
-    <script src="../JS/validacion_ID.js"></script>
+    <script src="/fronted/public/js/cultivos/validacion_deshabilitar.js"></script>
 </body>
 </html>
