--- a/fronted/public/views/ciclo_cultivo/ID_ciclo_cultivo_actualizar.html
+++ b/fronted/public/views/ciclo_cultivo/ID_ciclo_cultivo_actualizar.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ID Ciclo Cultivo</title>
-    <link rel="stylesheet" href="../CSS/style_ID__ciclo_cultivo.css">
+    <!-- <link rel="stylesheet" href="../CSS/style_ID__ciclo_cultivo.css"> -->
+    <link rel="stylesheet" href="/fronted/public/css/pages/ciclo_cultivo/style_ID__ciclo_cultivo.css">
 </head>
 <body>
     <header class="header">
@@ -26,6 +27,6 @@
         </div>
     </main>
 
-    <script src="../JS/validacion_ID.js"></script>
+    <script src="/fronted/public/js/ciclo_cultivo/validacion_actualizar.js"></script>
 </body>
 </html>
