--- a/fronted/public/views/ciclo_cultivo/descargar_ciclo_cultivo.html
+++ b/fronted/public/views/ciclo_cultivo/descargar_ciclo_cultivo.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmación</title>
-    <link rel="stylesheet" href="../CSS/style_confirmacion.css">
+    <!-- <link rel="stylesheet" href="../CSS/style_confirmacion.css"> -->
+    <link rel="stylesheet" href="/fronted/public/css/pages/ciclo_cultivo/style_confirmacion.css">
 </head>
 <body>
     <header class="header">
