--- a/fronted/public/css/pages/homes/stylieshome-insumos-sensores.css
+++ b/fronted/public/css/pages/homes/stylieshome-insumos-sensores.css
@@ -124,6 +124,11 @@
     gap: var(--spacing-5);
     flex-wrap: wrap;
   }
+
+  .top-boxes a{
+    text-decoration: none;
+    color: var(--black);
+  }
   
   .top-boxes__item {
     background-color: var(--caja-superior-visible);
