--- a/fronted/public/views/components/grid.html
+++ b/fronted/public/views/components/grid.html
@@ -2,7 +2,7 @@
     <!-- Primer cuadro -->
     <div class="grid__item">
         <!-- <div class="grid__text grid__text--first">Texto sobre el primer cuadro</div> -->
-        <img class="grid__image" src="/Lembo/imagenes proyecto/1-1-jpg.webp" alt="Imagen 1">
+        <img class="grid__image" src="/fronted/public/img/1-1-jpg.webp" alt="Imagen 1">
     </div>
     <!-- Segundo cuadro -->
     <div class="grid__item">
