--- a/fronted/public/views/homes/home-ciclo.html
+++ b/fronted/public/views/homes/home-ciclo.html
@@ -13,21 +13,21 @@
     <header class="header">
         <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
         <nav class="header__nav">
-            <a class="header__link" href="#">Inicio</a>
-            <a class="header__link" href="#">Insumos</a>
-            <a class="header__link" href="#">Sensores</a>
+            <a class="header__link" href="index.html">Inicio</a>
+            <a class="header__link" href="home-insumos.html">Insumos</a>
+            <a class="header__link" href="home-sensores.html">Sensores</a>
         </nav>
     </header>
     <div class="background">
         <div class="top-boxes">
             <div class="top-boxes__item">
-                <p class="top-boxes__text">Crear ciclo cultivo</p>
+                <p class="top-boxes__text"><a href="../ciclo_cultivo/crear_ciclo_cultivo.html">Crear ciclo cultivo</a></p>
             </div>
             <div class="top-boxes__item">
-                <p class="top-boxes__text">Visualizar ciclo cultivo</p>
+                <p class="top-boxes__text"><a href="">Visualizar ciclo cultivo</a></p>
             </div>
             <div class="top-boxes__item">
-                <p class="top-boxes__text">Listar ciclo cultivo</p>
+                <p class="top-boxes__text"><a href="">Listar ciclo cultivo</a></p>
             </div>
         </div>
         <div class="grid"></div>
