--- a/fronted/public/views/homes/home-insumos.html
+++ b/fronted/public/views/homes/home-insumos.html
@@ -15,9 +15,9 @@
         <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
     
         <nav class="header__nav">
-            <a href="#" class="header__link">Inicio</a>
-            <a href="#" class="header__link">Cultivos</a>
-            <a href="#" class="header__link">Sensores</a>
+            <a href="index.html" class="header__link">Inicio</a>
+            <a href="home-cultivo-3.html" class="header__link">Cultivos</a>
+            <a href="home-sensores.html" class="header__link">Sensores</a>
         </nav>
     </header>
 
@@ -27,13 +27,13 @@
         <!-- Cajas superiores -->
         <div class="top-boxes">
             <div class="top-boxes__item">
-                <p>Crear insumo</p>
+                <p><a href="../insumos/crear_inusomo.html">Crear insumo</a></p>
             </div>
             <div class="top-boxes__item">
-                <p>Visualizar insumo</p>
+                <p><a href="">Visualizar insumo</a></p>
             </div>
             <div class="top-boxes__item">
-                <p>Listar insumo</p>
+                <p><a href="">Listar insumo</a></p>
             </div>
         </div>
 
