--- a/fronted/public/views/homes/index.html
+++ b/fronted/public/views/homes/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto SENA</title>
-    <!-- <link rel="stylesheet" href="../CSS/stylieshome-insumos-sensores.css"> -->
     <link rel="stylesheet" href="/fronted/public/css/pages/homes/stylieshome-insumos-sensores.css">
     <script src="/fronted/public/views/components/grid.js"></script>
     
@@ -15,11 +14,8 @@
     <header class="header">
         <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
         <nav class="header__nav">
-            <a href="#" class="header__link">Registrar usuario</a>
-            <a href="#" class="header__link">Insumos</a>
-            <a href="#" class="header__link">Actualizar sensores</a>
-            <a href="#" class="header__link">Sensores</a>
-            <a href="#" class="header__link">Listar usuarios</a>
+            <a href="../usuarios/registrar.html" class="header__link">Registrar usuario</a>
+            <a href="../usuarios/listar.html" class="header__link">Listar usuarios</a>
         </nav>
     </header>
 
@@ -27,9 +23,9 @@
     <div class="background">
         <!-- Botones superiores -->
         <div class="top-boxes">
-            <div class="top-boxes__item"><p>Sensores</p></div>
-            <div class="top-boxes__item"><p>Insumos</p></div>
-            <div class="top-boxes__item"><p>Cultivos</p></div>
+            <div class="top-boxes__item"><p><a href="../homes/home-sensores.html">Sensores</a></p></div>
+            <div class="top-boxes__item"><p><a href="../homes/home-insumos.html">Insumos</a></p></div>
+            <div class="top-boxes__item"><p><a href="../homes/home-ciclo.html">Cultivos</a></p></div>
         </div>
 
         <!-- Contenedor de cuadros -->
