--- a/fronted/public/views/sensores/ID_sensores_actualizar.html
+++ b/fronted/public/views/sensores/ID_sensores_actualizar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ID Sensor</title>
-    <link rel="stylesheet" href="../CSS/style_ID_sensores.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/sensores/style_ID_sensores.css">
 </head>
 <body>
     <header class="header">
@@ -21,7 +21,7 @@
                 
                 <div id="mensaje" class="mensaje"></div>
 
-                <button id="enviarBtn" class="sensor-content__button">Enviar</button>
+                <button id="enviarBtn" class="sensor-content__button"><a href="datos_sensor.html">Enviar</a></button>
             </div>
         </div>
     </main>
