--- a/fronted/public/css/main.css
+++ b/fronted/public/css/main.css
@@ -7,6 +7,6 @@
 @import url('components/footer.css');
 @import url('components/forms.css');
 @import url('components/header.css');
-@import url('components/button.css');
+@import url('components/listar.css');
 @import url('pages/home.css');
 @import url('themes/dark-mode.css');
