--- a/fronted/public/views/homes/home-cultivo-3.html
+++ b/fronted/public/views/homes/home-cultivo-3.html
@@ -15,23 +15,23 @@
         <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
         <nav class="header__nav">
             <h2 class="header__title">SGL</h2>
-            <a class="header__link" href="#">Ciclo cultivo</a>
-            <a class="header__link" href="#">Insumos</a>
-            <a class="header__link" href="#">Sensores</a>
-            <a class="header__link" href="#">Inicio</a>
+            <a class="header__link" href="home-ciclo.html">Ciclo cultivo</a>
+            <a class="header__link" href="home-insumos.html">Insumos</a>
+            <a class="header__link" href="home-sensores.html">Sensores</a>
+            <a class="header__link" href="index.html">Inicio</a>
         </nav>
     </header>
 
     <div class="background">
         <div class="top-boxes">
             <div class="top-boxes__item">
-                <p class="top-boxes__text">Crear cultivo</p>
+                <p class="top-boxes__text"><a href="../cultivo/crear_cultivo.html">Crear cultivo</a></p>
             </div>
             <div class="top-boxes__item">
-                <p class="top-boxes__text">Visualizar cultivo</p>
+                <p class="top-boxes__text"><a href="">Visualizar cultivo</a></p>
             </div>
             <div class="top-boxes__item">
-                <p class="top-boxes__text">Listar cultivo</p>
+                <p class="top-boxes__text"><a href="">Listar cultivo</a></p>
             </div>
         </div>
 
