--- a/fronted/public/views/homes/home-sensores.html
+++ b/fronted/public/views/homes/home-sensores.html
@@ -14,17 +14,17 @@
         <!-- <img src="/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo"> -->
         <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
         <nav class="header__nav">
-            <a href="#" class="header__link">Inicio</a>
-            <a href="#" class="header__link">Insumos</a>
-            <a href="#" class="header__link">Sensores</a>
+            <a href="index.html" class="header__link">Inicio</a>
+            <a href="home-insumos.html" class="header__link">Insumos</a>
+            <a href="home-cultivo-3.html" class="header__link">Cultivos</a>
         </nav>
     </header>
 
     <main class="background">
         <section class="top-boxes">
-            <div class="top-boxes__item">Crear sensor</div>
-            <div class="top-boxes__item">Visualizar sensor</div>
-            <div class="top-boxes__item">Listar sensor</div>
+            <div class="top-boxes__item"><a href="../sensores/crear_sensor.html">Crear sensor</a></div>
+            <div class="top-boxes__item"><a href="../sensores/ID_sensores_actualizar.html">Visualizar sensor</a></div>
+            <div class="top-boxes__item"><a href="">Listar sensor</a></div>
         </section>
 
         <div class="grid"></div>
