--- a/fronted/public/views/usuarios/listar.html
+++ b/fronted/public/views/usuarios/listar.html
@@ -38,7 +38,7 @@
 
             <div class="table-container__button-container">
                 <!-- <a href="/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Imprimir usuarios Mensaje/index.html" class="table-container__button-container-link"> -->
-                <a href="/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Imprimir usuarios Mensaje/index.html" class="table-container__button-container-link">
+                <a href="/fronted/public/views/usuarios/imprimir.html" class="table-container__button-container-link">
                     <button class="btn btn-print">Imprimir</button>
                 </a>
             </div>
