--- a/fronted/public/views/usuarios/recuperacion.html
+++ b/fronted/public/views/usuarios/recuperacion.html
@@ -4,21 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contraseña cambiada exitosamente</title>
-    <link rel="stylesheet" href="/fronted/public/css/pages/usuarios/recuperacion.css">
+    <link rel="stylesheet" href="/fronted/public/css/main.css">
+    <script src="/fronted/public/views/components/header.js"></script>
 </head>
 <body>
-    <header class="header">
-        <h1 class="header__title">Lembo</h1>
-        <div class="header__logo">
-            <img class="header__logo-img" src="../img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="logo sena">
-        </div>
-    </header>
-
-    <main class="main">
+    <header class="header"></header>
+    <main class="form-container">
         <div class="message">
             <h3 class="message__title">Tu contraseña ha sido cambiada exitosamente</h3>
-            <!-- <a class="message__link" href="/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Inicio sesion/index.html"> -->
-            <a class="message__link" href="/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Inicio sesion/index.html">
+            <a class="message__link" href="inicio_sesion.html">
                 <button class="message__button" type="button">
                     <h4 class="message__button-text">Iniciar Sesión</h4>
                 </button>
