--- a/fronted/public/views/usuarios/registrar.html
+++ b/fronted/public/views/usuarios/registrar.html
@@ -71,8 +71,8 @@
 
         <div id="mensajeValidacion" class="form__message"></div>
         <div class="form__btn-group">
-            <button type="submit" class="form__btn form__btn--registrar">Crear</button>
-            <a href="/ruta-de-retorno" class="btn__secundary">Cancelar</a>
+            <button type="submit" class="form__btn form__btn--registrar">registrar</button>
+            <a href="" class="btn__secundary">Cancelar</a>
         </div>        
     </form>
 
