--- a/fronted/public/views/homes/home-ciclo.html
+++ b/fronted/public/views/homes/home-ciclo.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
+        <img src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA" class="header__logo">
         <nav class="header__nav">
             <a class="header__link" href="index.html">Inicio</a>
             <a class="header__link" href="home-insumos.html">Insumos</a>
@@ -21,13 +21,13 @@
     <div class="background">
         <div class="top-boxes">
             <div class="top-boxes__item">
-                <p class="top-boxes__text"><a href="../ciclo_cultivo/crear_ciclo_cultivo.html">Crear ciclo cultivo</a></p>
+                <p><a href="../ciclo_cultivo/crear_ciclo_cultivo.html">Crear ciclo cultivo</a></p>
             </div>
             <div class="top-boxes__item">
-                <p class="top-boxes__text"><a href="">Visualizar ciclo cultivo</a></p>
+                <p><a href="">Visualizar ciclo cultivo</a></p>
             </div>
             <div class="top-boxes__item">
-                <p class="top-boxes__text"><a href="">Listar ciclo cultivo</a></p>
+                <p><a href="">Listar ciclo cultivo</a></p>
             </div>
         </div>
         <div class="grid"></div>
