--- a/fronted/public/views/homes/home-insumos.html
+++ b/fronted/public/views/homes/home-insumos.html
@@ -12,7 +12,7 @@
 
     <!-- Header -->
     <header class="header">
-        <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
+        <img src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA" class="header__logo">
     
         <nav class="header__nav">
             <a href="index.html" class="header__link">Inicio</a>
@@ -36,14 +36,10 @@
                 <p><a href="">Listar insumo</a></p>
             </div>
         </div>
-
         <!-- Contenedor de cuadros -->
         <div class="grid"></div>
-
     </div>
-
     <!-- Botón -->
-    <button class="button button--secondary">Reporte</button>
-    
+    <!-- <button class="button button--secondary">Reporte</button> -->
 </body>
 </html>
