--- a/fronted/public/views/homes/home-sensores.html
+++ b/fronted/public/views/homes/home-sensores.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <!-- <img src="/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo"> -->
-        <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
+        <img src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA" class="header__logo">
         <nav class="header__nav">
             <a href="index.html" class="header__link">Inicio</a>
             <a href="home-insumos.html" class="header__link">Insumos</a>
