--- a/fronted/public/views/homes/index.html
+++ b/fronted/public/views/homes/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto SENA</title>
+    <title>Home Principal</title>
     <link rel="stylesheet" href="/fronted/public/css/pages/homes/stylieshome-insumos-sensores.css">
     <script src="/fronted/public/views/components/grid.js"></script>
     
@@ -12,7 +12,7 @@
 <body>
     <!-- Encabezado -->
     <header class="header">
-        <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
+        <img src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA" class="header__logo">
         <nav class="header__nav">
             <a href="../usuarios/registrar.html" class="header__link">Registrar usuario</a>
             <a href="../usuarios/listar.html" class="header__link">Listar usuarios</a>
