--- a/fronted/public/views/components/grid.html
+++ b/fronted/public/views/components/grid.html
@@ -2,16 +2,16 @@
     <!-- Primer cuadro -->
     <div class="grid__item">
         <!-- <div class="grid__text grid__text--first">Texto sobre el primer cuadro</div> -->
-        <img class="grid__image" src="/fronted/public/img/1-1-jpg.webp" alt="Imagen 1">
+        <img class="grid__image" src="/fronted/public/img/grid_1.webp" alt="Imagen 1">
     </div>
     <!-- Segundo cuadro -->
     <div class="grid__item">
         <!-- <div class="grid__text grid__text--second">Texto debajo del segundo cuadro</div> -->
-        <img class="grid__image" src="/Lembo/imagenes proyecto/1-1-jpg.webp" alt="Imagen 1">
+        <img class="grid__image" src="/fronted/public/img/grid_2.jpg" alt="Imagen 1">
     </div>
     <!-- Tercer cuadro -->
     <div class="grid__item">
         <!-- <div class="grid__text grid__text--third">Texto sobre el tercer cuadro</div> -->
-        <img class="grid__image" src="/Lembo/imagenes proyecto/1-1-jpg.webp" alt="Imagen 1">
+        <img class="grid__image" src="/fronted/public/img/grid_3.webp" alt="Imagen 1">
     </div>
 </div>
