--- a/fronted/public/views/homes/home-insumos.html
+++ b/fronted/public/views/homes/home-insumos.html
@@ -12,7 +12,7 @@
 
     <!-- Header -->
     <header class="header">
-        <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
+        <img src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA" class="header__logo">
     
         <nav class="header__nav">
             <a href="index.html" class="header__link">Inicio</a>
@@ -30,7 +30,7 @@
                 <p><a href="../insumos/crear_inusomo.html">Crear insumo</a></p>
             </div>
             <div class="top-boxes__item">
-                <p><a href="">Visualizar insumo</a></p>
+                <p><a href="../insumos/visualizar_insumo.html">Visualizar insumo</a></p>
             </div>
             <div class="top-boxes__item">
                 <p><a href="">Listar insumo</a></p>
@@ -43,7 +43,7 @@
     </div>
 
     <!-- Botón -->
-    <button class="button button--secondary">Reporte</button>
+    <a href="../insumos/descargar_insumo.html"><button class="button button--secondary">Reporte</button</a>
     
 </body>
 </html>
