--- a/fronted/public/views/homes/index.html
+++ b/fronted/public/views/homes/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="/fronted/public/css/pages/homes/stylieshome-insumos-sensores.css">
     <script src="/fronted/public/views/components/grid.js"></script>
     
-
 </head>
 <body>
     <!-- Encabezado -->
     <header class="header">
-        <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
+        <img src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA" class="header__logo">
         <nav class="header__nav">
             <a href="../usuarios/registrar.html" class="header__link">Registrar usuario</a>
             <a href="../usuarios/listar.html" class="header__link">Listar usuarios</a>
