--- a/fronted/public/views/insumos/imprimir_insumo.html
+++ b/fronted/public/views/insumos/imprimir_insumo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmación</title>
-    <link rel="stylesheet" href="../CSS/style_confirmacion.css">
+    <link rel="stylesheet" href="/fronted/public/css/pages/insumos/style_confirmacion.css">
 </head>
 <body>
 
