--- a/fronted/public/views/homes/home-cultivo-3.html
+++ b/fronted/public/views/homes/home-cultivo-3.html
@@ -12,7 +12,7 @@
 <body>
 
     <header class="header">
-        <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
+        <img src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA" class="header__logo">
         <nav class="header__nav">
             <h2 class="header__title">SGL</h2>
             <a class="header__link" href="home-ciclo.html">Ciclo cultivo</a>
@@ -28,7 +28,7 @@
                 <p class="top-boxes__text"><a href="../cultivo/crear_cultivo.html">Crear cultivo</a></p>
             </div>
             <div class="top-boxes__item">
-                <p class="top-boxes__text"><a href="">Visualizar cultivo</a></p>
+                <p class="top-boxes__text"><a href="../cultivo/visualizar_cultivo.html">Visualizar cultivo</a></p>
             </div>
             <div class="top-boxes__item">
                 <p class="top-boxes__text"><a href="">Listar cultivo</a></p>
