--- a/fronted/public/css/pages/homes/stilyciclo.css
+++ b/fronted/public/css/pages/homes/stilyciclo.css
@@ -81,7 +81,7 @@ html, body {
 
 /* Imagen de fondo */
 .background {
-    background-image: url('/imagenes proyecto/cultivo22.webp');
+    background-image: url('/fronted/public/img/back_index.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -93,6 +93,11 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+a{
+    text-decoration: none;
+    color: var(--black);
 }
 
 /* Contenedor de cuadros */
