--- a/fronted/public/views/homes/index.html
+++ b/fronted/public/views/homes/index.html
@@ -24,7 +24,7 @@
         <div class="top-boxes">
             <div class="top-boxes__item"><p><a href="../homes/home-sensores.html">Sensores</a></p></div>
             <div class="top-boxes__item"><p><a href="../homes/home-insumos.html">Insumos</a></p></div>
-            <div class="top-boxes__item"><p><a href="../homes/home-ciclo.html">Cultivos</a></p></div>
+            <div class="top-boxes__item"><p><a href="../homes/home-cultivo-3.html">Cultivos</a></p></div>
         </div>
 
         <!-- Contenedor de cuadros -->
