--- a/fronted/public/css/components/listar.css
+++ b/fronted/public/css/components/listar.css
@@ -76,10 +76,11 @@ main {
     flex-direction: column;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.9);
-    margin: 2rem;
+    margin: 4rem 2rem 2rem 2rem; /* ↑ top right bottom left */
     border-radius: 1rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
 
 .page-title {
     font-size: 3.2rem;
