--- a/fronted/public/views/sensores/ID_sensores_habilitar.html
+++ b/fronted/public/views/sensores/ID_sensores_habilitar.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ID Sensor</title>
     <link rel="stylesheet" href="../CSS/style_ID_sensores.css">
+    <link rel="stylesheet" href="/fronted/public/css/components/header.css">
 </head>
 <body>
     <header class="header">
-        <img class="header__logo" src="../IMG/loso_SENA.png" alt="Logo SENA">
+       <img class="header__logo" src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA">
     </header>
 
     <main>
