Link logo del sena

--- a/fronted/public/views/sensores/ID_sensores_deshabilitar.html
+++ b/fronted/public/views/sensores/ID_sensores_deshabilitar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ID Sensor</title>
-    <link rel="stylesheet" href="../CSS/style_ID_sensores.css">
+    <link rel="stylesheet" href="/fronted/public/css/sensores/ID_sensores_deshabilitar.css">
     <link rel="stylesheet" href="/fronted/public/css/components/header.css">
 </head>
 <body>
